# health-timer

./: Cargo.toml  README.md  build.sh  install-mac.sh  tauri.conf.json
.github/workflows/: release.yml
DesignAssets/: BACKGROUND_ASSETS_README.md  COPY_THIS_TO_UI_AI_ZH.txt
icons/: icon.icns
src/: app.js  index.html  main.rs  styles.css
