[package]
name = "health-timer"
version = "1.0.3"
description = "健康循环提醒 - 呵护颈椎与眼睛"
authors = ["You"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["notification-all", "shell-open", "system-tray", "window-set-always-on-top", "window-show", "window-set-focus", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
